src/corelib/io/qlockfile_unix.cpp
@@ -178,6 +178,13 @@ QLockFile::LockError QLockFilePrivate::tryLock_sys()
     // We hold the lock, continue.
     fileHandle = fd;
 
+    // Sync to disk if possible. Ignore errors (e.g. not supported).
+#if defined(_POSIX_SYNCHRONIZED_IO) && _POSIX_SYNCHRONIZED_IO > 0
+    fdatasync(fileHandle);
+#else
+    fsync(fileHandle);
+#endif
+
     return QLockFile::NoError;
 }
 
